--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li><a href='https://pt.wikipedia.org/wiki/Sass_(linguagem_de_folhas_de_estilos)'
                             target="_blank">Sass</a></li>
                     <li><a href='https://pt.wikipedia.org/wiki/JavaScript' target="_blank">JavaScript</a></li>
-
+                    <li><a href='https://pt.wikipedia.org/wiki/Git' target="_blank">Git</a></li>
                 </ul>
             </article>
 
